--- a/customwidget.css
+++ b/customwidget.css
@@ -8,20 +8,20 @@ body {
 	padding-left: 10px;
 	padding-right: 10px;
 	width: 100%;
-	display: flex;
-	flex-direction: column;
+	display: grid;
+	grid-template-rows: repeat(7, minmax(0, 35px));
 }
 
 .widget {
-	/* Uncomment for background, I make a custom background in OBS for this because of transparency and shaders */
-	/* background-color: rgb(44, 44, 44);
-    border-radius: 4px;
-    border-color: rgb(22, 22, 22);
-    box-shadow: 0px 0px 5px black; */
+	background-color: rgb(44, 44, 44);
+	border-radius: 4px;
+	border-color: rgb(22, 22, 22);
+	box-shadow: 0px 0px 5px black;
 
 	padding: 8px;
 	height: 250px;
 	margin: 8px;
+
 	position: relative;
 	z-index: -2;
 	display: flex;
@@ -67,12 +67,55 @@ span {
 	text-align: center;
 	display: inline;
 }
-
+#titlebox {
+	grid-row-start: 1;
+	grid-row-end: 3;
+	display: grid;
+	grid-template-columns: repeat(9, minmax(0, 1fr));
+	place-items: center;
+}
 #artist,
 #artistbox {
 	font-size: xx-large;
 	text-align: center;
 	display: inline;
+}
+#artistbox {
+	grid-row-start: 3;
+	grid-row-end: 5;
+	display: grid;
+	grid-template-columns: repeat(9, minmax(0, 1fr));
+	place-items: center;
+}
+#artistgradient,
+#titlegradient {
+	display: grid;
+	width: 100%;
+	height: 100%;
+	grid-column-start: 2;
+	grid-column-end: 9;
+	overflow: hidden;
+	mask-image: radial-gradient(circle, white 85%, transparent 100%);
+	mask-clip: no-clip;
+	-moz-mask-image: radial-gradient(circle, white 85%, transparent 100%);
+	-moz-mask-clip: no-clip;
+	-webkit-mask-image: radial-gradient(circle, white 85%, transparent 100%);
+	-webkit-mask-clip: no-clip;
+}
+#artist,
+#title {
+	white-space: nowrap;
+	margin: auto;
+	place-items: center;
+	overflow-wrap: normal;
+}
+#titlebox > span:first-child,
+#artistbox > span:first-child {
+	margin-left: 35px;
+}
+#titlebox > span:last-child,
+#artistbox > span:last-child {
+	margin-right: 35px;
 }
 
 #progressbar,
@@ -98,11 +141,13 @@ span {
 }
 
 #timeline {
-	margin-top: 10px;
+	margin: 0;
 	display: grid;
 	grid-template-columns: 1fr 20fr 1fr;
 	align-items: center;
 	place-items: center;
+	grid-row-start: 5;
+	grid-row-end: 8;
 }
 
 #length {
@@ -115,14 +160,56 @@ span {
 	font-size: x-large;
 }
 
-.blue-neon-text,
-#title {
+.blue-neon-text {
 	text-shadow: 0 0 7px cyan, 0 0 10px blue;
 }
-.red-neon-text,
-#artist {
+.red-neon-text {
 	text-shadow: 0 0 7px red, 0 0 10px red;
 }
 .gold-neon-text {
 	text-shadow: 0 0 7px yellow, 0 0 10px orange;
+}
+
+.marquee {
+	/* animation properties */
+	-moz-transform: translateX(100%);
+	-webkit-transform: translateX(100%);
+	transform: translateX(100%);
+
+	-moz-animation: marquee 15s linear infinite;
+	-webkit-animation: marquee 15s linear infinite;
+	animation: marquee 15s linear infinite;
+}
+
+/* for Firefox */
+@-moz-keyframes marquee {
+	from {
+		-moz-transform: translateX(100%);
+	}
+	to {
+		-moz-transform: translateX(-100%);
+	}
+}
+
+/* for Chrome */
+@-webkit-keyframes marquee {
+	from {
+		-webkit-transform: translateX(100%);
+	}
+	to {
+		-webkit-transform: translateX(-100%);
+	}
+}
+
+@keyframes marquee {
+	from {
+		-moz-transform: translateX(100%);
+		-webkit-transform: translateX(100%);
+		transform: translateX(100%);
+	}
+	to {
+		-moz-transform: translateX(-100%);
+		-webkit-transform: translateX(-100%);
+		transform: translateX(-100%);
+	}
 }
